# hasbitica

./: LICENSE  README.md  hasbitica.cabal  hasbitica.lkshs  hasbitica.lkshw
app/: Main.hs
src/: Hasbitica.hs
src/Hasbitica/: Api.hs  Instances.hs  LensStuff.hs  Settings.hs  SystemChatParse.hs  Types.hs
