name:                hasbitica
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/kobeyu/hasbitica#readme
license:             BSD3
license-file:        LICENSE
author:              Greg Manning
maintainer:          g@tockli.me
copyright:           value
category:            value
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Hasbitica.Api
                     , Hasbitica.LensStuff
                     , Hasbitica.Settings
  build-depends:       base >= 4.7 && < 5
                     , text
                     , aeson
                     , wreq
                     , lens
                     , servant-client >= 0.4.4.5
                     , servant
                     , time
                     , transformers
                     , either
                     , mtl
                     , scientific
                     , containers
                     , unordered-containers
                     , directory
                     , filepath
                     , bytestring
  default-language:    Haskell2010

executable hasbitica-cli
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hasbitica
                     , either
                     , servant-client >= 0.4.4.5
                     , bytestring
                     , directory
                     , filepath
                     , text
                     , aeson
                     , mtl
                     , containers
                     , lens-aeson
                     , transformers
                     , lens
                     , time
                     , cmdargs
  default-language:    Haskell2010

test-suite hasbitica-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hasbitica
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kobeyu/hasbitica
